--- a/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
     "            \n",
     "            #person = one_a_tag.text.replace(\"https://kulturpersoner.uppsalakyrkogardar.se/\",\"\").replace(\"-\",\" \").replace(\"%C3%84\",\"Ä\")\n",
     "            #person = one_a_tag.text.replace(\"https://kulturpersoner.uppsalakyrkogardar.se/\",\"\")\n",
-    "            new_item[\"person\"] = one_a_tag.text\n",
+    "            new_item[\"kulturgravname\"] = one_a_tag.text\n",
     "            new_item[\"href\"] = one_a_tag['href'].replace(\"https://kulturpersoner.uppsalakyrkogardar.se/\",\"\").replace(\"/\",\"\")\n",
     "            #print(new_item)\n",
     "            newList.append(new_item)\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>person</th>\n",
+       "      <th>kulturgravname</th>\n",
        "      <th>href</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -176,7 +176,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                    person                   href\n",
+       "            kulturgravname                   href\n",
        "0           Anita Nathorst         anita-nathorst\n",
        "1               Henri Osti             henri-osti\n",
        "2          Fadime Sahindal        fadime-sahindal\n",
@@ -192,7 +192,7 @@
        "[128 rows x 2 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,6 +206,507 @@
    "metadata": {},
    "source": [
     "Wikidata "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install sparqlwrapper\n",
+    "# https://rdflib.github.io/sparqlwrapper/\n",
+    "\n",
+    "import sys,json\n",
+    "from SPARQLWrapper import SPARQLWrapper, JSON\n",
+    "\n",
+    "endpoint_url = \"https://query.wikidata.org/sparql\"\n",
+    "\n",
+    "query = \"\"\"select (REPLACE(STR(?person),\".*Q\",\"Q\") AS ?qid) ?personLabel ?refURL ?href\n",
+    "{\n",
+    "   hint:Query hint:optimizer \"None\" .\n",
+    "   ?person wdt:P119 wd:Q4353116;\n",
+    "           p:P119 ?burial_statement. #Place of burial\n",
+    "   {?burial_statement prov:wasDerivedFrom ?ref}\n",
+    "   {?ref pr:P854 ?refURL} \n",
+    "   FILTER (CONTAINS(str(?refURL),'kulturpersoner')) .  \n",
+    "   BIND(REPLACE(REPLACE(str(?refURL), \"https://kulturpersoner.uppsalakyrkogardar.se/\", \"\"),\"/\",\"\") AS ?href)\n",
+    " \n",
+    "   SERVICE wikibase:label { bd:serviceParam wikibase:language \"sv\"}\n",
+    "}\n",
+    "Order by ?personLabel\n",
+    "\"\"\"\n",
+    "\n",
+    "def get_sparql_dataframe(endpoint_url, query):\n",
+    "    \"\"\"\n",
+    "    Helper function to convert SPARQL results into a Pandas data frame.\n",
+    "    \"\"\"\n",
+    "    user_agent = \"salgo60/%s.%s\" % (sys.version_info[0], sys.version_info[1])\n",
+    " \n",
+    "    sparql = SPARQLWrapper(endpoint_url, agent=user_agent)\n",
+    "    sparql.setQuery(query)\n",
+    "    sparql.setReturnFormat(JSON)\n",
+    "    result = sparql.query()\n",
+    "\n",
+    "    processed_results = json.load(result.response)\n",
+    "    cols = processed_results['head']['vars']\n",
+    "\n",
+    "    out = []\n",
+    "    for row in processed_results['results']['bindings']:\n",
+    "        item = []\n",
+    "        for c in cols:\n",
+    "            item.append(row.get(c, {}).get('value'))\n",
+    "        out.append(item)\n",
+    "\n",
+    "    return pd.DataFrame(out, columns=cols)\n",
+    "\n",
+    "WDKulturGravar = get_sparql_dataframe(endpoint_url, query)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>qid</th>\n",
+       "      <th>personLabel</th>\n",
+       "      <th>refURL</th>\n",
+       "      <th>href</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Q63992891</td>\n",
+       "      <td>Adolf Fredrik Nyman</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
+       "      <td>adolf-nyman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Q2913935</td>\n",
+       "      <td>Adolf Murray</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
+       "      <td>adolph-murray</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Q2653181</td>\n",
+       "      <td>Adolf Noreen</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
+       "      <td>adolf-noreen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Q364399</td>\n",
+       "      <td>Adolph Törneros</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
+       "      <td>adolph-torneros</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Q4949712</td>\n",
+       "      <td>Agnes Geijer</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
+       "      <td>agnes-geijer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>Q943803</td>\n",
+       "      <td>Uno von Troil</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/u...</td>\n",
+       "      <td>uno-von-troil</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>116</th>\n",
+       "      <td>Q6043915</td>\n",
+       "      <td>Viktor Persson</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/v...</td>\n",
+       "      <td>viktor-persson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>117</th>\n",
+       "      <td>Q4983741</td>\n",
+       "      <td>Vivi Laurent-Täckholm</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/v...</td>\n",
+       "      <td>vivi-tackholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>Q6197251</td>\n",
+       "      <td>Yngve Svalander</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/y...</td>\n",
+       "      <td>yngve-svalander</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>Q13390628</td>\n",
+       "      <td>Åke Holm</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
+       "      <td>ake-holm</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>120 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           qid  ...             href\n",
+       "0    Q63992891  ...      adolf-nyman\n",
+       "1     Q2913935  ...    adolph-murray\n",
+       "2     Q2653181  ...     adolf-noreen\n",
+       "3      Q364399  ...  adolph-torneros\n",
+       "4     Q4949712  ...     agnes-geijer\n",
+       "..         ...  ...              ...\n",
+       "115    Q943803  ...    uno-von-troil\n",
+       "116   Q6043915  ...   viktor-persson\n",
+       "117   Q4983741  ...    vivi-tackholm\n",
+       "118   Q6197251  ...  yngve-svalander\n",
+       "119  Q13390628  ...         ake-holm\n",
+       "\n",
+       "[120 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "WDKulturGravar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "compare href "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfmerge = pd.merge(WDKulturGravar, Kulturgravar,how='outer', on='href',indicator=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfmerge['_merge'] = dfmerge['_merge'].str.replace('left_only','Wikidata_only').str.replace('right_only','Kulturgravar_only')\n",
+    "dfmerge.rename(columns={\"_merge\": \"Kulturgravar_Wikidata\"},inplace = True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "both                 124\n",
+       "Kulturgravar_only      5\n",
+       "Wikidata_only          3\n",
+       "Name: Kulturgravar_Wikidata, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfmerge[\"Kulturgravar_Wikidata\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>qid</th>\n",
+       "      <th>personLabel</th>\n",
+       "      <th>refURL</th>\n",
+       "      <th>href</th>\n",
+       "      <th>kulturgravname</th>\n",
+       "      <th>Kulturgravar_Wikidata</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>Q99484369</td>\n",
+       "      <td>Henrik Wilhelm Söderman</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/en/henrik-wilhelm-soderman/</td>\n",
+       "      <td>enhenrik-wilhelm-soderman</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Wikidata_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>Q99484881</td>\n",
+       "      <td>Johan Fredrik Carlsson</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/en/johan-fredrik-carlsson/</td>\n",
+       "      <td>enjohan-fredrik-carlsson</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Wikidata_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>Q99485357</td>\n",
+       "      <td>Rune Hammarling</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/en/rune-hammarling/</td>\n",
+       "      <td>enrune-hammarling</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Wikidata_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>henri-osti</td>\n",
+       "      <td>Henri Osti</td>\n",
+       "      <td>Kulturgravar_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>henrik-wilhelm-soderman</td>\n",
+       "      <td>Henrik Wilhelm Söderman</td>\n",
+       "      <td>Kulturgravar_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>herman-baumbach</td>\n",
+       "      <td>Herman Baumbach</td>\n",
+       "      <td>Kulturgravar_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>johan-fredrik-carlsson</td>\n",
+       "      <td>Johan Fredrik Carlsson</td>\n",
+       "      <td>Kulturgravar_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>rune-hammarling</td>\n",
+       "      <td>Rune Hammarling</td>\n",
+       "      <td>Kulturgravar_only</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           qid  ... Kulturgravar_Wikidata\n",
+       "60   Q99484369  ...         Wikidata_only\n",
+       "71   Q99484881  ...         Wikidata_only\n",
+       "111  Q99485357  ...         Wikidata_only\n",
+       "127        NaN  ...     Kulturgravar_only\n",
+       "128        NaN  ...     Kulturgravar_only\n",
+       "129        NaN  ...     Kulturgravar_only\n",
+       "130        NaN  ...     Kulturgravar_only\n",
+       "131        NaN  ...     Kulturgravar_only\n",
+       "\n",
+       "[8 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KulturgravarNotBoth = dfmerge[~(dfmerge[\"Kulturgravar_Wikidata\"] == \"both\")].copy() \n",
+    "KulturgravarNotBoth  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Kulturgravaronly = dfmerge[dfmerge[\"Kulturgravar_Wikidata\"] == \"Kulturgravar_only\"].copy() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 5 entries, 127 to 131\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column                 Non-Null Count  Dtype \n",
+      "---  ------                 --------------  ----- \n",
+      " 0   qid                    0 non-null      object\n",
+      " 1   personLabel            0 non-null      object\n",
+      " 2   refURL                 0 non-null      object\n",
+      " 3   href                   5 non-null      object\n",
+      " 4   kulturgravname         5 non-null      object\n",
+      " 5   Kulturgravar_Wikidata  5 non-null      object\n",
+      "dtypes: object(6)\n",
+      "memory usage: 280.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "Kulturgravaronly.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>kulturgravname</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Henri Osti</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/henri-osti</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Henrik Wilhelm Söderman</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/henrik-wilhelm-soderman</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Herman Baumbach</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/herman-baumbach</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Johan Fredrik Carlsson</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/johan-fredrik-carlsson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Rune Hammarling</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/rune-hammarling</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            kulturgravname                                                                   url\n",
+       "0               Henri Osti               https://kulturpersoner.uppsalakyrkogardar.se/henri-osti\n",
+       "1  Henrik Wilhelm Söderman  https://kulturpersoner.uppsalakyrkogardar.se/henrik-wilhelm-soderman\n",
+       "2          Herman Baumbach          https://kulturpersoner.uppsalakyrkogardar.se/herman-baumbach\n",
+       "3   Johan Fredrik Carlsson   https://kulturpersoner.uppsalakyrkogardar.se/johan-fredrik-carlsson\n",
+       "4          Rune Hammarling          https://kulturpersoner.uppsalakyrkogardar.se/rune-hammarling"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Kulturgravaronly[\"url\"] = \"https://kulturpersoner.uppsalakyrkogardar.se/\" + Kulturgravaronly[\"href\"] \n",
+    "pd.set_option('column_space', 20)\n",
+    "pd.set_option('max_colwidth', 300)\n",
+    "Kulturgravaronly = Kulturgravaronly.reset_index(drop=True)  \n",
+    "\n",
+    "Kulturgravaronly[[\"kulturgravname\",\"url\"]]"
    ]
   },
   {
