--- a/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
+++ b/Check WD kulturpersoner.uppsalakyrkogardar.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Webscrape kulturpersoner.uppsalakyrkogardar\n",
-    "version 0.1\n",
+    "version 0.2\n",
     "\n",
     "checks uppsalakyrkogardar and compare with Wikidata. \n",
     "\n",
@@ -227,7 +227,9 @@
     "\n",
     "endpoint_url = \"https://query.wikidata.org/sparql\"\n",
     "\n",
-    "query = \"\"\"select (REPLACE(STR(?person),\".*Q\",\"Q\") AS ?qid) ?personLabel ?refURL ?href\n",
+    "# https://w.wiki/crt\n",
+    "\n",
+    "query = \"\"\"select ?person (REPLACE(STR(?person),\".*Q\",\"Q\") AS ?qid) ?personLabel ?refURL ?href\n",
     "{\n",
     "   hint:Query hint:optimizer \"None\" .\n",
     "   ?person wdt:P119 wd:Q4353116;\n",
@@ -294,6 +296,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>person</th>\n",
        "      <th>qid</th>\n",
        "      <th>personLabel</th>\n",
        "      <th>refURL</th>\n",
@@ -303,6 +306,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q63992891</td>\n",
        "      <td>Q63992891</td>\n",
        "      <td>Adolf Fredrik Nyman</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
@@ -310,6 +314,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q2913935</td>\n",
        "      <td>Q2913935</td>\n",
        "      <td>Adolf Murray</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
@@ -317,6 +322,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q2653181</td>\n",
        "      <td>Q2653181</td>\n",
        "      <td>Adolf Noreen</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
@@ -324,6 +330,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q364399</td>\n",
        "      <td>Q364399</td>\n",
        "      <td>Adolph Törneros</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
@@ -331,6 +338,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q4949712</td>\n",
        "      <td>Q4949712</td>\n",
        "      <td>Agnes Geijer</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
@@ -342,37 +350,43 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>115</th>\n",
+       "      <th>116</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q943803</td>\n",
        "      <td>Q943803</td>\n",
        "      <td>Uno von Troil</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/u...</td>\n",
        "      <td>uno-von-troil</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
+       "      <th>117</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q6043915</td>\n",
        "      <td>Q6043915</td>\n",
        "      <td>Viktor Persson</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/v...</td>\n",
        "      <td>viktor-persson</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>117</th>\n",
+       "      <th>118</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q4983741</td>\n",
        "      <td>Q4983741</td>\n",
        "      <td>Vivi Laurent-Täckholm</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/v...</td>\n",
        "      <td>vivi-tackholm</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>118</th>\n",
+       "      <th>119</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q6197251</td>\n",
        "      <td>Q6197251</td>\n",
        "      <td>Yngve Svalander</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/y...</td>\n",
        "      <td>yngve-svalander</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>119</th>\n",
+       "      <th>120</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q13390628</td>\n",
        "      <td>Q13390628</td>\n",
        "      <td>Åke Holm</td>\n",
        "      <td>https://kulturpersoner.uppsalakyrkogardar.se/a...</td>\n",
@@ -380,24 +394,24 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>120 rows × 4 columns</p>\n",
+       "<p>121 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           qid  ...             href\n",
-       "0    Q63992891  ...      adolf-nyman\n",
-       "1     Q2913935  ...    adolph-murray\n",
-       "2     Q2653181  ...     adolf-noreen\n",
-       "3      Q364399  ...  adolph-torneros\n",
-       "4     Q4949712  ...     agnes-geijer\n",
-       "..         ...  ...              ...\n",
-       "115    Q943803  ...    uno-von-troil\n",
-       "116   Q6043915  ...   viktor-persson\n",
-       "117   Q4983741  ...    vivi-tackholm\n",
-       "118   Q6197251  ...  yngve-svalander\n",
-       "119  Q13390628  ...         ake-holm\n",
+       "                                       person  ...             href\n",
+       "0    http://www.wikidata.org/entity/Q63992891  ...      adolf-nyman\n",
+       "1     http://www.wikidata.org/entity/Q2913935  ...    adolph-murray\n",
+       "2     http://www.wikidata.org/entity/Q2653181  ...     adolf-noreen\n",
+       "3      http://www.wikidata.org/entity/Q364399  ...  adolph-torneros\n",
+       "4     http://www.wikidata.org/entity/Q4949712  ...     agnes-geijer\n",
+       "..                                        ...  ...              ...\n",
+       "116    http://www.wikidata.org/entity/Q943803  ...    uno-von-troil\n",
+       "117   http://www.wikidata.org/entity/Q6043915  ...   viktor-persson\n",
+       "118   http://www.wikidata.org/entity/Q4983741  ...    vivi-tackholm\n",
+       "119   http://www.wikidata.org/entity/Q6197251  ...  yngve-svalander\n",
+       "120  http://www.wikidata.org/entity/Q13390628  ...         ake-holm\n",
        "\n",
-       "[120 rows x 4 columns]"
+       "[121 rows x 5 columns]"
       ]
      },
      "execution_count": 5,
@@ -443,8 +457,8 @@
     {
      "data": {
       "text/plain": [
-       "both                 127\n",
-       "Kulturgravar_only      3\n",
+       "both                 128\n",
+       "Kulturgravar_only      1\n",
        "Name: Kulturgravar_Wikidata, dtype: int64"
       ]
      },
@@ -483,6 +497,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>person</th>\n",
        "      <th>qid</th>\n",
        "      <th>personLabel</th>\n",
        "      <th>refURL</th>\n",
@@ -493,30 +508,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>127</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>henri-osti</td>\n",
-       "      <td>Henri Osti</td>\n",
-       "      <td>Kulturgravar_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>128</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>herman-baumbach</td>\n",
-       "      <td>Herman Baumbach</td>\n",
-       "      <td>Kulturgravar_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>129</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>johan-fredrik-carlsson</td>\n",
-       "      <td>Johan Fredrik Carlsson</td>\n",
+       "      <td>heinrich-osti</td>\n",
+       "      <td>Heinrich Osti</td>\n",
        "      <td>Kulturgravar_only</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -524,12 +522,10 @@
        "</div>"
       ],
       "text/plain": [
-       "     qid personLabel  ...          kulturgravname Kulturgravar_Wikidata\n",
-       "127  NaN         NaN  ...              Henri Osti     Kulturgravar_only\n",
-       "128  NaN         NaN  ...         Herman Baumbach     Kulturgravar_only\n",
-       "129  NaN         NaN  ...  Johan Fredrik Carlsson     Kulturgravar_only\n",
+       "    person  qid personLabel  ...           href kulturgravname Kulturgravar_Wikidata\n",
+       "128    NaN  NaN         NaN  ...  heinrich-osti  Heinrich Osti     Kulturgravar_only\n",
        "\n",
-       "[3 rows x 6 columns]"
+       "[1 rows x 7 columns]"
       ]
      },
      "execution_count": 9,
@@ -550,9 +546,7 @@
     {
      "data": {
       "text/plain": [
-       "127    NaN\n",
        "128    NaN\n",
-       "129    NaN\n",
        "Name: refURL, dtype: object"
       ]
      },
@@ -584,18 +578,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 3 entries, 127 to 129\n",
-      "Data columns (total 6 columns):\n",
+      "Int64Index: 1 entries, 128 to 128\n",
+      "Data columns (total 7 columns):\n",
       " #   Column                 Non-Null Count  Dtype \n",
       "---  ------                 --------------  ----- \n",
-      " 0   qid                    0 non-null      object\n",
-      " 1   personLabel            0 non-null      object\n",
-      " 2   refURL                 0 non-null      object\n",
-      " 3   href                   3 non-null      object\n",
-      " 4   kulturgravname         3 non-null      object\n",
-      " 5   Kulturgravar_Wikidata  3 non-null      object\n",
-      "dtypes: object(6)\n",
-      "memory usage: 168.0+ bytes\n"
+      " 0   person                 0 non-null      object\n",
+      " 1   qid                    0 non-null      object\n",
+      " 2   personLabel            0 non-null      object\n",
+      " 3   refURL                 0 non-null      object\n",
+      " 4   href                   1 non-null      object\n",
+      " 5   kulturgravname         1 non-null      object\n",
+      " 6   Kulturgravar_Wikidata  1 non-null      object\n",
+      "dtypes: object(7)\n",
+      "memory usage: 64.0+ bytes\n"
      ]
     }
    ],
@@ -636,28 +631,16 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Henri Osti</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/henri-osti</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Herman Baumbach</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/herman-baumbach</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Johan Fredrik Carlsson</td>\n",
-       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/johan-fredrik-carlsson</td>\n",
+       "      <td>Heinrich Osti</td>\n",
+       "      <td>https://kulturpersoner.uppsalakyrkogardar.se/heinrich-osti</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           kulturgravname                                                                  url\n",
-       "0              Henri Osti              https://kulturpersoner.uppsalakyrkogardar.se/henri-osti\n",
-       "1         Herman Baumbach         https://kulturpersoner.uppsalakyrkogardar.se/herman-baumbach\n",
-       "2  Johan Fredrik Carlsson  https://kulturpersoner.uppsalakyrkogardar.se/johan-fredrik-carlsson"
+       "  kulturgravname                                                         url\n",
+       "0  Heinrich Osti  https://kulturpersoner.uppsalakyrkogardar.se/heinrich-osti"
       ]
      },
      "execution_count": 13,
